--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html lang="uk">
   <head>
     <meta charset="UTF-8" />
+    <meta name="description" content="Інтернет магазин кави. Найкращі акційні пропозиції, асортимент, швидка доставка">
     <!-- Favicons -->
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
@@ -11,6 +12,27 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Просто кава</title>
+<!-- Preview -->
+<!-- Open Graph теги -->
+<meta property="og:title" content="Інтернет магазин кави">
+<meta property="og:description"
+    content="Інтернет -  магазин кави. Найкращі акційні пропозиції, асортимент, швидка доставка">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://maksymchukhrai.github.io/coffee-project/">
+<meta property="og:image" content="https://maksymchukhrai.github.io/coffee-project/assets/preview_1200x630.jpg">
+
+<!-- Twitter card meta tags (helps with Telegram compatibility) -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Інтернет -  магазин кави">
+<meta name="twitter:description"
+    content="Інтернет магазин кави. Найкращі акційні пропозиції, асортимент, швидка доставка">
+<meta name="twitter:image" content="https://maksymchukhrai.github.io/coffee-project/assets/preview_1200x630.jpg">
+
+<!-- Additional recommended meta tags -->
+<meta property="og:image:width" content="1200">
+<meta property="og:image:height" content="630">
+<meta property="og:image:type" content="image/jpeg">
+
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
