--- a/src/index.html
+++ b/src/index.html
@@ -57,7 +57,7 @@
       name="twitter:image"
       content="https://raw.githubusercontent.com/MaksymChukhrai/coffee-project/main/assets/preview_1200x630.jpg"
     />
-    <meta name="robots" content="max-image-preview:large">
+    <meta name="robots" content="max-image-preview:large" />
 
     <!-- Additional recommended meta tags -->
     <meta property="og:image:width" content="1200" />
